# secrt

./: .coderabbit.yaml  .env.example  .gitignore  .gitmodules  .golangci.yml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md  go.mod
.github/workflows/: ci.yml  release-cli.yml  release-server.yml  release.yml
.taskmaster/: archive.json
.taskmaster/docs/: argon2id-migration-plan.md  next-session-handoff.md  task-a-frontend-ci.md  task-b-notarize-parallel.md  task-c-clippy-all-targets.md  tauri-app-plan.md  test-cycle-perf.md
.taskmaster/plans/: task-22-passkey-login.md  task-37-unified-preferences.md  task-61-webauthn-sig-verify-test-plan.md  task-62-prf-amk-diagnostic-logging.md  task-68-amk-pair-code.md
.taskmaster/tasks/: tasks.json
cmd/gen-vectors/: main.go
cmd/secret-server/: main.go
cmd/secretctl/: main.go
cmd/secrt/: burn.go  claim.go  cli.go  cli_test.go  client.go  color.go  completion.go  create.go  main.go  passphrase.go  version.go
cmd/secrt-server/: main_test.go
crates/secrt-app/: Cargo.toml  Entitlements.plist  tauri.conf.json
crates/secrt-app/icons/: icon.icns
crates/secrt-app/src/: lib.rs  main.rs
crates/secrt-app/tests/: csp_drift.rs  envelope_vectors.rs
crates/secrt-cli/: AGENTS.md  CHANGELOG.md  Cargo.toml  Makefile  README.md
crates/secrt-cli/scripts/: bench.sh
crates/secrt-cli/src/: auth.rs  burn.rs  cli.rs  client.rs  completion.rs  config.rs  fileutil.rs  get.rs  info.rs  instance_trust.rs  lib.rs  list.rs  main.rs  passphrase.rs  qr.rs  send.rs  sync.rs  update.rs  update_check.rs
crates/secrt-cli/tests/: cli_auth.rs  cli_bin.rs  cli_burn.rs  cli_dispatch.rs  cli_gen.rs  cli_get.rs  cli_info.rs  cli_list.rs  cli_send.rs  cli_sync.rs  cli_update.rs  cli_update_check.rs  e2e.rs  envelope_vectors.rs  helpers.rs  ttl_vectors.rs  update_vectors.rs
crates/secrt-cli/tests/fixtures/: envelope.vectors.json
crates/secrt-core/: CHANGELOG.md  Cargo.toml
crates/secrt-core/examples/: regenerate_envelope_vectors.rs
crates/secrt-core/src/: amk.rs  api.rs  apikey.rs  crypto.rs  instance.rs  lib.rs  payload.rs  server.rs  ttl.rs  types.rs  url.rs
crates/secrt-core/tests/: amk_vectors.rs  apikey_vectors.rs  instance.rs
crates/secrt-desktop/: Cargo.toml  Entitlements.plist  tauri.conf.json
crates/secrt-server/: .env.example  CHANGELOG.md  Cargo.toml  README.md  build.rs
crates/secrt-server/docs/: firefox-prf-mozilla-bug-draft.md  firefox-prf-source-investigation.md  prf-amk-wrapping.md  prf-cross-device-testing.md  yubikeys.md
crates/secrt-server/migrations/: 001_initial.sql  002_amk_wrappers.sql  002_auth_apikey_v2.sql  003_last_active_at.sql  004_passkey_label.sql  005_prf_amk_wrappers.sql
crates/secrt-server/src/: assets.rs  config.rs  lib.rs  main.rs  reaper.rs  release_poller.rs  runtime.rs
crates/secrt-server/src/domain/: auth.rs  limiter.rs  mod.rs  secret_rules.rs  webauthn.rs
crates/secrt-server/src/http/: mod.rs  security.rs
crates/secrt-server/src/storage/: migrations.rs  mod.rs  postgres.rs
crates/secrt-server/templates/: index.html
crates/secrt-server/tests/: admin_cli.rs  api_amk.rs  api_auth_passkeys.rs  api_behavior.rs  api_error_paths.rs  api_passkey_mgmt.rs  api_prf_wrapper.rs  api_quota.rs  cors.rs  domain_auth.rs  domain_secret_rules.rs  legacy_test_parity.md  postgres_integration.rs  reaper_runtime.rs  server_bin.rs  spa_routes.rs  sri_survives_token_replace.rs  web_pair.rs
crates/secrt-server/tests/helpers/: mod.rs  webauthn.rs
docs/: api.md  caddy-privacy-logging.md  cli-testing-2026-02-09.md  credentials-and-deployment.md  instance-trust-model.md  ip-privacy-logging.md  one-time-secret-service.md  review-2026-02-04.md  self-hosting.md  test-coverage.md  update-flow-testing.md  v1-gaps-and-recommendations.md  v2-dashboard-ideas.md  whitepaper.md
docs/plans/: client-generated-api-root-keys-passkeys.md  i18n-plan.md  manual-go-no-go-checklist.md  website-plan.md
docs/reports/: doc-accuracy-audit-2026-02-15.md  pre-release-audit-2026-02-12.md
internal/api/: binary_payload_test.go  errors.go  middleware.go  middleware_test.go  pages.go  pages_test.go  quota_test.go  server.go  server_behavioral_test.go  server_more_test.go  server_test.go  types.go
internal/auth/: api_keys.go  api_keys_test.go
internal/config/: config.go  config_test.go  dotenv.go  dotenv_test.go
internal/database/: connection.go  connection_test.go  migrator.go  migrator_test.go
internal/envelope/: envelope.go  envelope_test.go  ttl_test.go
internal/ratelimit/: ratelimit.go  ratelimit_test.go
internal/secrets/: secrets.go  secrets_test.go
internal/storage/: api_keys.go  errors.go  secrets.go
legacy/secrt-server/: Makefile  README.md  go.sum
scripts/: deploy.sh  extract-changelog-entry.sh  generate_webauthn_vectors.py  secrt-server-deploy.sh
spec/: README.md
src/: burn.rs  claim.rs  cli.rs  client.rs  color.rs  completion.rs  config.rs  create.rs  gen.rs  keychain.rs  lib.rs  main.rs  passphrase.rs  send.rs
tests/: cli_burn.rs  cli_claim.rs  cli_create.rs  cli_dispatch.rs  cli_gen.rs  cli_get.rs  cli_send.rs  e2e.rs  envelope_vectors.rs  helpers.rs  ttl_vectors.rs
v1/: api.md  cli.md  envelope.md  openapi.yaml  server.md
web/: README.md  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  secrt-web-0.1.0.tgz  static.go  tsconfig.json  vite.config.ts
(+200 files in other folders)
