[workspace]
resolver = "2"
members = [
    "crates/secrt-core",
    "crates/secrt-cli",
    "crates/secrt-server",
    "crates/secrt-app",
    # "crates/secrt-wasm",     # future
]

[workspace.package]
version = "0.14.3"
edition = "2021"
license = "MIT"
repository = "https://github.com/getsecrt/secrt"

[workspace.dependencies]
# Shared dependencies pinned at workspace level
ring = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
axum = { version = "0.8", features = ["http1", "json", "tokio"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time", "net", "sync"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["catch-panic", "trace", "timeout", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
async-trait = "0.1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde", "clock"] }
tokio-postgres = { version = "0.7", features = ["with-serde_json-1", "with-chrono-0_4", "with-uuid-1"] }
deadpool-postgres = "0.14"
hyper-util = { version = "0.1", features = ["server-auto", "server-graceful", "tokio", "http1", "service"] }
tokio-io-timeout = "1.2"
hex = "0.4"
uuid = { version = "1", features = ["serde", "v7"] }
url = "2"
urlencoding = "2"
rust-embed = "8"
mime_guess = "2"
zstd = "0.13"
argon2 = "0.5"
qrcode = { version = "0.14", default-features = false }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.release.package.ring]
opt-level = 3
