[package]
name = "secrt-app"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Tauri desktop app for secrt"

[[bin]]
name = "secrt-app"
path = "src/main.rs"

[lib]
name = "secrt_app"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
secrt-core = { path = "../secrt-core", version = "0.14.3" }
tauri = { version = "2", features = [] }
serde.workspace = true
serde_json.workspace = true
base64.workspace = true
ring.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }
