[package]
name = "secrt-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version = "1.82"

[[bin]]
name = "secrt"
path = "src/main.rs"

[dependencies]
secrt-core = { path = "../secrt-core", version = "0.13.1" }
ring.workspace = true
ureq = { version = "3", default-features = false, features = ["rustls"] }
serde.workspace = true
serde_json.workspace = true
base64.workspace = true
is-terminal = "0.4"
rpassword = "7"
toml = "0.8"
dirs = "6"
keyring = { version = "3", optional = true, features = ["apple-native", "linux-native", "windows-native"] }
qrcode.workspace = true

[features]
default = ["keychain"]
keychain = ["keyring"]

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
