[package]
name = "secrt-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared crypto, envelope types, and protocol logic for secrt"

[dependencies]
ring.workspace = true
serde.workspace = true
serde_json.workspace = true
base64.workspace = true
chrono.workspace = true
