[package]
name = "secrt-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version = "1.82"
description = "Axum backend and admin tooling for secrt"

[dependencies]
secrt-core = { path = "../secrt-core", version = "0.14.4" }
ring.workspace = true
serde.workspace = true
serde_json = { workspace = true, features = ["raw_value"] }
base64.workspace = true
axum.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
async-trait.workspace = true
thiserror.workspace = true
chrono.workspace = true
tokio-postgres.workspace = true
deadpool-postgres.workspace = true
hyper-util.workspace = true
tokio-io-timeout.workspace = true
hex.workspace = true
uuid.workspace = true
url.workspace = true
urlencoding.workspace = true
rust-embed.workspace = true
mime_guess.workspace = true

[[bin]]
name = "secrt-server"
path = "src/main.rs"

[[bin]]
name = "secrt-admin"
path = "src/bin/secrt-admin.rs"

[dev-dependencies]
tower = { workspace = true, features = ["util"] }
tokio = { workspace = true, features = ["test-util"] }
